--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "externals/vertcoin_scrypt"]
 	path = externals/vertcoin_scrypt
 	url = https://github.com/scr34m/vertcoin_scrypt.git
+[submodule "externals/lyra2re-hash"]
+	path = externals/lyra2re-hash
+	url = https://github.com/metalicjames/lyra2re-hash-python
